<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <Button
        android:id="@+id/btnAddMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_meal" />

    <Button
        android:id="@+id/btnShowMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_find_shop" />

    <Button
        android:id="@+id/btnShowCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_calendar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
